unpackaged/main/default/objects/Case/fields/Gift_Account_Number_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Gift_Account_Number_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Source of Funds is Gift/Inheritance, and the account is already at the firm, but the account number was unable to be found.</inlineHelpText>
    <label>Gift: Account Number Not Found</label>
    <type>Checkbox</type>
</CustomField>