unpackaged/main/default/objects/Case/fields/Gift_Account_Number_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Gift_Account_Number_Wizard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift - Account Number - Wizard</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Cases (Gift - Account Number - Wizard)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>