unpackaged/main/default/objects/Case/fields/Gift_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Gift_Custodian__c</fullName>
    <inlineHelpText>If the Source of Funds is Gift/Inheritance, the custodian for the account that is already at the firm.</inlineHelpText>
    <label>Gift: Custodian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>