unpackaged/main/default/objects/Case/fields/Gift_Includes_Insurance_Product__c.field-meta.xml
<CustomField>
    <fullName>Gift_Includes_Insurance_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Source of Funds is a Gift/Inheritance, does the money funding this account include an insurance product?</inlineHelpText>
    <label>Gift: Includes Insurance Product?</label>
    <type>Checkbox</type>
</CustomField>