unpackaged/main/default/objects/Case/fields/Home_Office_Goal_Milestone_End__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Goal_Milestone_End__c</fullName>
    <label>Home Office Goal Milestone End</label>
    <type>DateTime</type>
</CustomField>