unpackaged/main/default/objects/Case/fields/Home_Office_Submission_Milestone_Start__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Submission_Milestone_Start__c</fullName>
    <label>Home Office Submission Milestone Start</label>
    <type>DateTime</type>
</CustomField>