unpackaged/main/default/objects/Case/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household New Field</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Household New Field)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>