unpackaged/main/default/objects/Case/fields/IF_Total_as_of_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>IF_Total_as_of_Net_Worth__c</fullName>
    <description>Interval Funds Total Amount in Asset Class as a % of Net Worth.</description>
    <label>IF Total as % of Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>