unpackaged/main/default/objects/Case/fields/IF_Total_including_Today__c.field-meta.xml
<CustomField>
    <fullName>IF_Total_including_Today__c</fullName>
    <description>Interval Funds Total $ Amount in Asset Class (including today&#39;s purchase)</description>
    <label>IF Total $ including Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>