unpackaged/main/default/objects/Case/fields/Incomplete_Record__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incomplete Record</label>
    <type>Checkbox</type>
</CustomField>