unpackaged/main/default/objects/Case/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instruction</label>
    <referenceTo>Instruction__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>