unpackaged/main/default/objects/Case/fields/Instructions_Text__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Text__c</fullName>
    <label>Instructions Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>