unpackaged/main/default/objects/Case/fields/isConditionallyApproved__c.field-meta.xml
<CustomField>
    <fullName>isConditionallyApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Conditionally Approved</label>
    <type>Checkbox</type>
</CustomField>