unpackaged/main/default/objects/Case/fields/isJointOwnerPopulated__c.field-meta.xml
<CustomField>
    <fullName>isJointOwnerPopulated__c</fullName>
    <formula>NOT(ISBLANK(Joint_Account_Owner__c))</formula>
    <label>isJointOwnerPopulated</label>
    <type>Checkbox</type>
</CustomField>