unpackaged/main/default/objects/Case/fields/isReturnedToAdvisor__c.field-meta.xml
<CustomField>
    <fullName>isReturnedToAdvisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReturnedToAdvisor</label>
    <type>Checkbox</type>
</CustomField>