unpackaged/main/default/objects/Case/fields/Joint_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Account Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Joint Account Owner)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>