unpackaged/main/default/objects/Case/fields/Journal_Between_Accounts_w_Matching_SSN__c.field-meta.xml
<CustomField>
    <fullName>Journal_Between_Accounts_w_Matching_SSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Journal Between Accounts w/ Matching SSN</label>
    <type>Checkbox</type>
</CustomField>