unpackaged/main/default/objects/Case/fields/Life_Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Type__c</fullName>
    <label>Life Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term</fullName>
            </value>
            <value>
                <fullName>Whole Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>