unpackaged/main/default/objects/Case/fields/Maestro__c.field-meta.xml
<CustomField>
    <fullName>Maestro__c</fullName>
    <formula>&#39;1&#39;</formula>
    <label>Maestro Net Worth Code</label>
    <type>Text</type>
</CustomField>