unpackaged/main/default/objects/Case/fields/Maestro_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Account_Number__c</fullName>
    <label>Maestro Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>