unpackaged/main/default/objects/Case/fields/Maestro_Address__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Address__c</fullName>
    <formula>null</formula>
    <label>Maestro Address</label>
    <type>Text</type>
</CustomField>