unpackaged/main/default/objects/Case/fields/Maestro_Birthdate_2__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Birthdate_2__c</fullName>
    <formula>IF(
    NOT(ISBLANK(TEXT(Wizard_Financial_Account__r.Joint_Owner__r.Entity_Type__c))), 
    NULL, 
    IF(
        ISBLANK(Wizard_Financial_Account__r.Joint_Owner__r.PersonBirthdate), 
        NULL, 
        LPAD(TEXT(MONTH(Wizard_Financial_Account__r.Joint_Owner__r.PersonBirthdate)), 2, &#39;0&#39;) &amp; &#39;/&#39; &amp;
        LPAD(TEXT(DAY(Wizard_Financial_Account__r.Joint_Owner__r.PersonBirthdate)), 2, &#39;0&#39;) &amp; &#39;/&#39; &amp;
        TEXT(YEAR(Wizard_Financial_Account__r.Joint_Owner__r.PersonBirthdate))
    )
)</formula>
    <label>Maestro Birthdate 2</label>
    <type>Text</type>
</CustomField>