unpackaged/main/default/objects/Case/fields/Maestro_Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Branch_ID__c</fullName>
    <formula>null</formula>
    <label>Maestro Branch ID</label>
    <type>Text</type>
</CustomField>