unpackaged/main/default/objects/Case/fields/Maestro_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Business_Type__c</fullName>
    <formula>&#39;RETAIL&#39;</formula>
    <label>Maestro Business Type</label>
    <type>Text</type>
</CustomField>