unpackaged/main/default/objects/Case/fields/Maestro_City_2__c.field-meta.xml
<CustomField>
    <fullName>Maestro_City_2__c</fullName>
    <description>Only used in Maestro Client Loader. For Joint Owner or 2nd person.</description>
    <formula>null</formula>
    <label>Maestro City 2</label>
    <type>Text</type>
</CustomField>