unpackaged/main/default/objects/Case/fields/Maestro_City__c.field-meta.xml
<CustomField>
    <fullName>Maestro_City__c</fullName>
    <formula>UPPER(LEFT( FinServ__Household__r.BillingCity, 26))</formula>
    <label>Maestro City</label>
    <type>Text</type>
</CustomField>