unpackaged/main/default/objects/Case/fields/Maestro_Country_ID__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Country_ID__c</fullName>
    <formula>IF(ISPICKVAL(FinServ__Household__r.BillingCountryCode, &#39;US&#39;), &#39;USA&#39;, TEXT(FinServ__Household__r.BillingCountryCode))</formula>
    <label>Maestro Country ID</label>
    <type>Text</type>
</CustomField>