unpackaged/main/default/objects/Case/fields/Maestro_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Current_Status__c</fullName>
    <formula>&#39;A&#39;</formula>
    <label>Maestro Current Status</label>
    <type>Text</type>
</CustomField>