unpackaged/main/default/objects/Case/fields/Maestro_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Custodian__c</fullName>
    <formula>Custodian__c</formula>
    <label>Maestro Custodian</label>
    <type>Text</type>
</CustomField>