unpackaged/main/default/objects/Case/fields/Maestro_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Dependents__c</fullName>
    <formula>null</formula>
    <label>Maestro Dependents</label>
    <type>Text</type>
</CustomField>