unpackaged/main/default/objects/Case/fields/Maestro_Display_Name1__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Display_Name1__c</fullName>
    <formula>UPPER(LEFT(
Wizard_Financial_Account__r.Primary_Owner__r.FirstName + &quot; &quot; +
IF(NOT(ISNULL(Wizard_Financial_Account__r.Primary_Owner__r.MiddleName)), &quot; &quot; + Wizard_Financial_Account__r.Primary_Owner__r.MiddleName + &quot; &quot;, &quot; &quot;) +
Wizard_Financial_Account__r.Primary_Owner__r.LastName,
40
))</formula>
    <label>Maestro Display Name1</label>
    <type>Text</type>
</CustomField>