unpackaged/main/default/objects/Case/fields/Maestro_Display_Name3__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Display_Name3__c</fullName>
    <formula>UPPER(IF(
LEN(
Wizard_Financial_Account__r.Joint_Owner__r.FirstName &amp; &quot; &quot; &amp;
Wizard_Financial_Account__r.Joint_Owner__r.MiddleName &amp; &quot; &quot; &amp;
Wizard_Financial_Account__r.Joint_Owner__r.LastName
) &gt; 40,
MID(
Wizard_Financial_Account__r.Joint_Owner__r.FirstName &amp; &quot; &quot; &amp;
Wizard_Financial_Account__r.Joint_Owner__r.MiddleName &amp; &quot; &quot; &amp;
Wizard_Financial_Account__r.Joint_Owner__r.LastName,
41,
40
),
&quot;&quot;
))</formula>
    <label>Maestro Display Name3</label>
    <type>Text</type>
</CustomField>