unpackaged/main/default/objects/Case/fields/Maestro_Duplicate_Created__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Duplicate_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE on an original case once its Maestro Trade Loader duplicate case has been created. Guards against duplicating the same case more than once.</description>
    <label>Maestro Duplicate Created</label>
    <type>Checkbox</type>
</CustomField>