unpackaged/main/default/objects/Case/fields/Maestro_Duplicate_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Duplicate_of_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On a Maestro Trade Loader duplicate case, points back to the original case it was cloned from.</description>
    <label>Maestro Duplicate of Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Maestro Duplicate Cases</relationshipLabel>
    <relationshipName>Maestro_Duplicate_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>