unpackaged/main/default/objects/Case/fields/Maestro_Employer_2__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Employer_2__c</fullName>
    <formula>null</formula>
    <label>Maestro Employer 2</label>
    <type>Text</type>
</CustomField>