unpackaged/main/default/objects/Case/fields/Maestro_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Expiration_Date__c</fullName>
    <formula>null</formula>
    <label>Maestro Expiration Date</label>
    <type>Text</type>
</CustomField>