unpackaged/main/default/objects/Case/fields/Maestro_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Full_Name__c</fullName>
    <formula>UPPER(IF(
NOT(ISBLANK(TEXT(FinServ__Household__r.Entity_Type__c))),
NULL, 
FinServ__FinancialAccount__r.FinServ__JointOwner__r.FirstName + &quot; &quot; +
IF(NOT(ISNULL(FinServ__FinancialAccount__r.FinServ__JointOwner__r.MiddleName)), &quot; &quot; + FinServ__FinancialAccount__r.FinServ__JointOwner__r.MiddleName + &quot; &quot;, &quot; &quot;) +
FinServ__FinancialAccount__r.FinServ__JointOwner__r.LastName
))</formula>
    <label>Maestro Full Name</label>
    <type>Text</type>
</CustomField>