unpackaged/main/default/objects/Case/fields/Maestro_Home_Email__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Home_Email__c</fullName>
    <formula>UPPER(LEFT( FinServ__FinancialAccount__r.FinServ__PrimaryOwner__r.PersonEmail, 50))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Home Email</label>
    <type>Text</type>
</CustomField>