unpackaged/main/default/objects/Case/fields/Maestro_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Home_Phone__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
 Wizard_Financial_Account__r.Primary_Owner__r.PersonMobilePhone,
&quot; &quot;, &quot;&quot;
),
&quot;-&quot;, &quot;&quot;
),
&quot;(&quot;, &quot;&quot;
),
&quot;)&quot;, &quot;&quot;
),
&quot;.&quot;, &quot;&quot;
)</formula>
    <label>Maestro Home Phone</label>
    <type>Text</type>
</CustomField>