unpackaged/main/default/objects/Case/fields/Maestro_ID_Issuer__c.field-meta.xml
<CustomField>
    <fullName>Maestro_ID_Issuer__c</fullName>
    <formula>null</formula>
    <label>Maestro ID Issuer</label>
    <type>Text</type>
</CustomField>