unpackaged/main/default/objects/Case/fields/Maestro_Income_Code__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Income_Code__c</fullName>
    <formula>&#39;1&#39;</formula>
    <label>Maestro Income Code</label>
    <type>Text</type>
</CustomField>