unpackaged/main/default/objects/Case/fields/Maestro_Income_Value__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Income_Value__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
TEXT(Wizard_Financial_Account__r.Primary_Owner__r.Approximate_Annual_Income_All_Sources__c),
&quot;.&quot;, &quot;&quot;
),
&quot;,&quot;, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Income Value</label>
    <type>Text</type>
</CustomField>