unpackaged/main/default/objects/Case/fields/Maestro_Investing_Experience__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Investing_Experience__c</fullName>
    <formula>null</formula>
    <label>Maestro Investing Experience</label>
    <type>Text</type>
</CustomField>