unpackaged/main/default/objects/Case/fields/Maestro_Investment_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Investment_Objectives__c</fullName>
    <formula>IF(LEFT(Wizard_Financial_Account__r.Primary_Owner__r.Investment_Objective_Ranked__c, 5) = &#39;Growt&#39;, &#39;R&#39;, IF(LEFT(Wizard_Financial_Account__r.Primary_Owner__r.Investment_Objective_Ranked__c, 5) = &#39;Incom&#39;, &#39;I&#39;, IF(LEFT(Wizard_Financial_Account__r.Primary_Owner__r.Investment_Objective_Ranked__c, 5) = &#39;Balan&#39;, &#39;L&#39;, IF(LEFT(Wizard_Financial_Account__r.Primary_Owner__r.Investment_Objective_Ranked__c, 5) = &#39;Specu&#39;, &#39;S&#39;, IF(LEFT(Wizard_Financial_Account__r.Primary_Owner__r.Investment_Objective_Ranked__c, 5) = &#39;Wealt&#39;, &#39;W&#39;,
IF(LEFT(Household__r.Investment_Objective_Ranked__c, 5) = &#39;Prese&#39;, &#39;P&#39;,&#39;&#39;))))))</formula>
    <label>Maestro Investment Objectives</label>
    <type>Text</type>
</CustomField>