unpackaged/main/default/objects/Case/fields/Maestro_Liquid_Assets_Value__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Liquid_Assets_Value__c</fullName>
    <formula>null</formula>
    <label>Maestro Liquid Assets Value</label>
    <type>Text</type>
</CustomField>