unpackaged/main/default/objects/Case/fields/Maestro_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Marital_Status__c</fullName>
    <formula>null</formula>
    <label>Maestro Marital Status</label>
    <type>Text</type>
</CustomField>