unpackaged/main/default/objects/Case/fields/Maestro_Name2__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Name2__c</fullName>
    <formula>UPPER(LEFT(
FinServ__FinancialAccount__r.FinServ__JointOwner__r.FirstName + &quot; &quot; +
IF(NOT(ISNULL(FinServ__FinancialAccount__r.FinServ__JointOwner__r.MiddleName)), &quot; &quot; + FinServ__FinancialAccount__r.FinServ__JointOwner__r.MiddleName + &quot; &quot;, &quot; &quot;) +
FinServ__FinancialAccount__r.FinServ__JointOwner__r.LastName,
40
))</formula>
    <label>Maestro Name2</label>
    <type>Text</type>
</CustomField>