unpackaged/main/default/objects/Case/fields/Maestro_Net_Worth_Value__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Net_Worth_Value__c</fullName>
    <formula>SUBSTITUTE(
TEXT(FinServ__Household__r.Approximate_Net_Worth__c),
&quot;,&quot;, &quot;&quot;
)</formula>
    <label>Maestro Net Worth Value</label>
    <type>Text</type>
</CustomField>