unpackaged/main/default/objects/Case/fields/Maestro_Occupation_1__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Occupation_1__c</fullName>
    <formula>null</formula>
    <label>Maestro Occupation 1</label>
    <type>Text</type>
</CustomField>