unpackaged/main/default/objects/Case/fields/Maestro_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Opened_Date__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Opened Date</label>
    <type>Text</type>
</CustomField>