unpackaged/main/default/objects/Case/fields/Maestro_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Party_Type__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;JNT&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Joint&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Joint Tenants WROS&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Community Property&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Joint Tenants in Common&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Joint Tenants by the Entirety&quot;)
),
&quot;JO&quot;,
IF(
OR(
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Trust&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Revocable Trust&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Irrevocable Trust&quot;)
),
&quot;TT&quot;,
IF(
OR(
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;529 Plan&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Conservatorship&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;UGMA/UTMA&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;ABLE&quot;)
),
&quot;MI&quot;,
IF(
OR(
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;UTMA&quot;),
ISPICKVAL(Wizard_Financial_Account__r.Registration_Type__c,&quot;Coverdell ESA&quot;),
NOT(ISBLANK(TEXT(Wizard_Financial_Account__r.Primary_Owner__r.Entity_Type__c )))
),
&quot;AP&quot;,
NULL
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Party Type</label>
    <type>Text</type>
</CustomField>