unpackaged/main/default/objects/Case/fields/Maestro_Primary_Owner_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Primary_Owner_Birthdate__c</fullName>
    <formula>Wizard_Financial_Account__r.Primary_Owner__r.PersonBirthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Primary Owner Birthdate</label>
    <type>Date</type>
</CustomField>