unpackaged/main/default/objects/Case/fields/Maestro_Proof_of_Identity__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Proof_of_Identity__c</fullName>
    <formula>null</formula>
    <label>Maestro Proof of Identity</label>
    <type>Text</type>
</CustomField>