unpackaged/main/default/objects/Case/fields/Maestro_Proof_Type__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Proof_Type__c</fullName>
    <formula>null</formula>
    <label>Maestro Proof Type</label>
    <type>Text</type>
</CustomField>