unpackaged/main/default/objects/Case/fields/Maestro_Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Risk_Tolerance__c</fullName>
    <formula>IF(ISPICKVAL(Wizard_Financial_Account__r.Primary_Owner__r.Risk_Tolerance__c, &#39;Conservative&#39;), 1, IF(ISPICKVAL(Wizard_Financial_Account__r.Primary_Owner__r.Risk_Tolerance__c, &#39;Moderately Conservative&#39;), 2, IF(ISPICKVAL(Wizard_Financial_Account__r.Primary_Owner__r.Risk_Tolerance__c, &#39;Moderate&#39;), 3, IF(ISPICKVAL(Wizard_Financial_Account__r.Primary_Owner__r.Risk_Tolerance__c, &#39;Moderately Aggressive&#39;), 4, IF(ISPICKVAL(Wizard_Financial_Account__r.Primary_Owner__r.Risk_Tolerance__c, &#39;Aggressive&#39;), 7, 0)))))</formula>
    <label>Maestro Risk Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>