unpackaged/main/default/objects/Case/fields/Maestro_Sort_Name__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Sort_Name__c</fullName>
    <formula>null</formula>
    <label>Maestro Sort Name</label>
    <type>Text</type>
</CustomField>