unpackaged/main/default/objects/Case/fields/Maestro_SSN_2__c.field-meta.xml
<CustomField>
    <fullName>Maestro_SSN_2__c</fullName>
    <formula>IF(
NOT(ISBLANK(TEXT(Wizard_Financial_Account__r.Primary_Owner__r.Entity_Type__c))),
NULL,
SUBSTITUTE( Joint_Account_Owner__r.Tax_ID__c , &quot;-&quot;, &quot;&quot;))</formula>
    <label>Maestro SSN 2</label>
    <type>Text</type>
</CustomField>