unpackaged/main/default/objects/Case/fields/Maestro_SSN__c.field-meta.xml
<CustomField>
    <fullName>Maestro_SSN__c</fullName>
    <formula>SUBSTITUTE( Wizard_Financial_Account__r.Primary_Owner__r.Tax_ID__c , &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro SSN</label>
    <type>Text</type>
</CustomField>