unpackaged/main/default/objects/Case/fields/Maestro_SSN_Tax_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Maestro_SSN_Tax_ID_Type__c</fullName>
    <formula>CASE(
TEXT(FinServ__Household__r.Entity_Type__c),
&quot;&quot;, &quot;S&quot;,
&quot;Sole Proprietorship&quot;, &quot;S&quot;,
&quot;Revocable Trust&quot;, &quot;S&quot;,
&quot;Irrevocable Trust&quot;, &quot;T&quot;,
&quot;T&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro SSN/Tax ID Type</label>
    <type>Text</type>
</CustomField>