unpackaged/main/default/objects/Case/fields/Maestro_State__c.field-meta.xml
<CustomField>
    <fullName>Maestro_State__c</fullName>
    <formula>UPPER(TEXT(Wizard_Financial_Account__r.Primary_Owner__r.BillingStateCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro State</label>
    <type>Text</type>
</CustomField>