unpackaged/main/default/objects/Case/fields/Maestro_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Status_Date__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Status Date</label>
    <type>Text</type>
</CustomField>