unpackaged/main/default/objects/Case/fields/Maestro_Street_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Street_Address_Line_1__c</fullName>
    <formula>UPPER(LEFT( FinServ__Household__r.BillingStreet , 79))</formula>
    <label>Maestro Street Address Line 1</label>
    <type>Text</type>
</CustomField>