unpackaged/main/default/objects/Case/fields/Maestro_Street_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Street_Address_Line_2__c</fullName>
    <formula>UPPER(IF(LEN( FinServ__Household__r.BillingStreet) &gt; 79,
MID(FinServ__Household__r.BillingStreet, 80, MIN(79, LEN(FinServ__Household__r.BillingStreet) - 79)),
&quot;&quot;))</formula>
    <label>Maestro Street Address Line 2</label>
    <type>Text</type>
</CustomField>