unpackaged/main/default/objects/Case/fields/Maestro_Tax_Bracket_Code__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Tax_Bracket_Code__c</fullName>
    <formula>null</formula>
    <label>Maestro Tax Bracket Code</label>
    <type>Text</type>
</CustomField>