unpackaged/main/default/objects/Case/fields/Maestro_Tax_Bracket_Value__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Tax_Bracket_Value__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Tax Bracket Value</label>
    <type>Text</type>
</CustomField>