unpackaged/main/default/objects/Case/fields/Maestro_Time_Horizon_Code__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Time_Horizon_Code__c</fullName>
    <formula>IF(ISPICKVAL(Wizard_Financial_Account__r.Primary_Owner__r.Time_Horizon__c, &#39;Less than 1 year&#39;), 7, IF(ISPICKVAL(FinServ__Household__r.Time_Horizon__c, &#39;1 to 3 years&#39;), 8, IF(ISPICKVAL(FinServ__Household__r.Time_Horizon__c, &#39;4 to 6 years&#39;), 9, IF(ISPICKVAL(FinServ__Household__r.Time_Horizon__c, &#39;7 to 8 years&#39;), 10, IF(ISPICKVAL(FinServ__Household__r.Time_Horizon__c, &#39;9 years or more&#39;), 11, 0)))))</formula>
    <label>Maestro Time Horizon Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>