unpackaged/main/default/objects/Case/fields/Maestro_Time_Horizon_Value__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Time_Horizon_Value__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Time Horizon Value</label>
    <type>Text</type>
</CustomField>