unpackaged/main/default/objects/Case/fields/Maestro_Trade_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Trade_Report_Date__c</fullName>
    <formula>IF(
WEEKDAY( Add_to_Trade_Report__c ) = 6,
Add_to_Trade_Report__c + 2,
IF(
WEEKDAY(Add_to_Trade_Report__c) = 7,
Add_to_Trade_Report__c + 1,
Add_to_Trade_Report__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Trade Report Date</label>
    <type>Date</type>
</CustomField>