unpackaged/main/default/objects/Case/fields/Maestro_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Work_Email__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Work Email</label>
    <type>Text</type>
</CustomField>