unpackaged/main/default/objects/Case/fields/Maestro_Zip_2__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Zip_2__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Zip 2</label>
    <type>Text</type>
</CustomField>