unpackaged/main/default/objects/Case/fields/Maestro_Zip__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Zip__c</fullName>
    <formula>FinServ__Household__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro Zip</label>
    <type>Text</type>
</CustomField>