unpackaged/main/default/objects/Case/fields/Main_Track_Task_Completion_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Main_Track_Task_Completion_Ratio__c</fullName>
    <formula>TEXT(Completed_Main_Track_Tasks__c) &amp; &quot;/&quot; &amp; TEXT(Total_Main_Track_Tasks__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Track Task Completion (Ratio)</label>
    <type>Text</type>
</CustomField>